--- a/WorkingClass/web/css/main.css
+++ b/WorkingClass/web/css/main.css
@@ -96,7 +96,7 @@ h2 {
 }
 
 body {
-  background-image: url(img/background.jpg);
+  background-image: url(../img/background.jpg);
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
