--- a/WorkingClass/web/css/profile-reg.css
+++ b/WorkingClass/web/css/profile-reg.css
@@ -57,12 +57,14 @@ a:hover {
 }
 
 .foto {
-    height: 300px;
-    width: 250px;
-    background-image: url(https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png);
+    width: 350px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.image {
+    max-width: 100%;
 }
 
 .pers-info {
