--- a/WorkingClass/web/css/promotions.css
+++ b/WorkingClass/web/css/promotions.css
@@ -136,7 +136,7 @@ body {
     border: none;
     cursor: pointer;
     font-size: 15px;
-    width: 40%;
+    width: 100%;
 }
 
 .nf {
@@ -164,11 +164,16 @@ body {
     justify-content: center;
 }
 
+form {
+    width:50%;
+}
+
 a:hover {
     color: black;
     text-decoration: none;
     opacity: 0.7;
 }
+
 
 a {
     display: inline-block;
