--- a/WorkingClass/web/css/messages.css
+++ b/WorkingClass/web/css/messages.css
@@ -172,7 +172,15 @@ a:hover {
 
 a {
     display: inline-block;
-    margin-left: 5px;
     color: black;
     font-weight: 400;
+}
+
+.profile-image {
+    max-height: 30px;
+    width: 30px;
+}
+
+label {
+    margin-bottom: 0px;
 }
