--- a/WorkingClass/web/css/chat.css
+++ b/WorkingClass/web/css/chat.css
@@ -16,7 +16,7 @@
     background-color: inherit;
     font-weight: 600;
     border: none;
-    margin-left: 74%;
+    margin-left: 66%;
 }
 
 .signoff:hover {
@@ -51,11 +51,24 @@ a:hover {
     padding: 30px;
 }
 
-.img {
-    min-width: 250px;
-    min-height: 300px;
-    margin-inline-end: 50px;
+.image-container {
+    max-width: 100%;
+    margin-bottom: 5px;
 }
+
+.mes {
+    max-width: 50%;
+}
+
+.image {
+    max-width: 100%;
+}
+
+.img {
+    max-width: 100%;
+    max-height: 100px;
+}
+
 
 .foto {
     height: 300px;
@@ -155,7 +168,7 @@ body {
     box-sizing: border-box;
     overflow: auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 .right-mes {
