--- a/WorkingClass/web/css/main.css
+++ b/WorkingClass/web/css/main.css
@@ -9,9 +9,9 @@
 
 form {
   border: 3px solid #f1f1f1;
-  width: 300px;
+  width: 320px;
   min-width: 300px;
-  height: 380px;
+  max-height: 420px;
   min-height: 300px;
   background: rgba(255, 255, 240, 1);
   border-radius: 15px;
