--- a/WorkingClass/web/css/reg.css
+++ b/WorkingClass/web/css/reg.css
@@ -2,7 +2,7 @@ form {
   border: 3px solid #f1f1f1;
   width: 300px;
   min-width: 300px;
-  height: 700px;
+  max-height: 800px;
   min-height: 300px;
   background: rgba(255, 255, 240, 1);
   border-radius: 15px;
