--- a/WorkingClass/web/css/main.css
+++ b/WorkingClass/web/css/main.css
@@ -101,3 +101,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.email-error, .password-error{
+  margin-left: 10px;
+  color: red;
+  visibility: hidden;
+  font-style: italic;
+}
