--- a/WorkingClass/web/css/reg.css
+++ b/WorkingClass/web/css/reg.css
@@ -89,3 +89,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.password-error, .date-error, .email-error, .name-error {
+  margin-left: 10px;
+  color: red;
+  visibility: hidden;
+  font-style: italic;
+}
