changes in style of search in dialogs

--- a/WorkingClass/web/css/messages.css
+++ b/WorkingClass/web/css/messages.css
@@ -203,3 +203,9 @@ label {
 .filters {
     margin-left: 10px;
 }
+
+.my-dropdown {
+    max-height: 300px;
+    overflow-y: auto;
+    margin-bottom: 20px;
+}
