added frontend validation to edit user

--- a/WorkingClass/web/css/profile-reg.css
+++ b/WorkingClass/web/css/profile-reg.css
@@ -131,3 +131,10 @@ body {
 .submit-button:hover {
     opacity: 0.8;
 }
+
+.name-error {
+    margin-left: 10px;
+    color: red;
+    visibility: hidden;
+    font-style: italic;
+}
